<resources>
    <string name="app_name">AIQuran</string>
    <string name="Display">Display</string>
    <string name="BackLight">BackLight</string>
    <string name="Determine">Determine whether the screen will remain lighted or not while reading or listening</string>
    <string name="WordMeaning">World meaning mode</string>
    <string name="IfYou">If you check this option you will able to see the word meaning of difficult quran words by touching on the brown words</string>
    <string name="BrowsingMethod">Browsing Method</string>
    <string name="ChangeHoly">Change Holy Quran browsing method</string>
    <string name="NightReading">Night Reading mode</string>
    <string name="WithThisOption">With this option you can unable or disable the night reading mode</string>
    <string name="GraphicalBackground">Graphical Background</string>
    <string name="CheckThis">Check this box to display the graphical backgroud</string>
    <string name="ChooseThems">Choose Thems</string>
    <string name="ForAll">Choose Theme for all AI-Quran (Free) views</string>
    <string name="CurentReciter">Curent reciter</string>
    <string name="SetThe">Set the current reciter to listen in Quran view</string>
    <string name="AudioStorage">Audio Storage</string>
    <string name="ChooseStorage">Choose storage path for download audio</string>
    <string name="DownloadAudio">Download Audio</string>
    <string name="Repeat">Repeat Sura/Jozaa/Quarter</string>
    <string name="RepeatPlaying">Repeat Sura/Jozaa/Quarter after finish playing</string>
    <string name="RepeatAyat">Repeat the Ayat after finish playing every Ayah</string>
    <string name="ChooseAyat">Choose Ayat repeat times number</string>
    <string name="FontSize">Font size</string>
    <string name="SetFont">Set the font size of holy Quran text</string>
    <string name="FontColor">Font Color</string>
    <string name="SetColor">Set the font color of holy Quran text</string>
    <string name="TextStroke">Text Stroke</string>
    <string name="SlectText">Select this option to enable text stroke in Holy Quran</string>
    <string name="TextBold">Text Bold</string>
    <string name="ChectText">Check this to display the Holy Quran texts in Bold font</string>
    <string name="TextStrokeColor">Text Stroke Color</string>
    <string name="YouChoose">You can choose your prefer color for Holy Quran text stroke,Be careful when check this option,because it effects on application performance</string>
    <string name="Tafsir">Tafsir \ Translation Mode</string>
    <string name="CheckTafsir">Check this option to display the Tafsir or Translation with Holy Quran text</string>
    <string name="ChooseTafsirTranlation">Choose Tafsir \ Translation</string>
    <string name="ChooseTafsir">Choose Tafsir or Translation to display with Holy Quran Text</string>
    <string name="DownloadTafsir">Download Tafsir \ Translation</string>
    <string name="TafsirTranslationFontSize">Tafsir \ Translation font size</string>
    <string name="ChooseTafsirFontSize">Choose font size for Tafsir / Translation </string>
</resources>
