<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Translation \ Tafsir">
        <SwitchPreference
            android:defaultValue="true"
            android:key="updateNotificationSetting"
            android:summary="@string/CheckTafsir"
            android:title="@string/Tafsir" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/appChooseTranslationArray"
            android:entryValues="@array/appChooseTranslationValue"
            android:key="ChooseTranslation"
            android:summary="@string/ChooseTafsir"
            android:title="@string/ChooseTafsirTranlation" />
        <Preference
            android:title="@string/DownloadTafsir"
            android:key="DownloadTafsir" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/appTafsirTranslationFontSizeArray"
            android:entryValues="@array/appTafsirTranslationFontSizeValue"
            android:key="TafsirTranslationFontSize"
            android:summary="@string/ChooseTafsirFontSize"
            android:title="@string/TafsirTranslationFontSize" />
    </PreferenceCategory>
</PreferenceScreen>
